[package]
name = "ianaio-utils"
version = "0.1.0"
edition = "2021"
description = "Convenience crate for common `web_sys` features"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/ianaio/utils"
homepage = "https://rustwasm.ianaio/utils"
categories = ["api-bindings", "wasm"]
rust-version = "1.80"


[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "History",
    "HtmlElement",
    "Location",
    "Window",
    "HtmlHeadElement",
    "Element",
]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_derive = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

